--- a/html css js/test.html
+++ b/html css js/test.html
@@ -5,12 +5,15 @@
     <title>Testing JavaScript</title>
 </head>
 <body>
-    <h1>Greeting</h1>
-    <p id="target"></p>
+    <h1 id="target"></h1>
     <p id="class"></p>
     <p id="sum"></p>
     <p id="product"></p>
     <p id="average"></p>
+    <p id="leap"></p>
+    <p id="square"></p>
+    <h2>Leap years</h2>
+    <ul id="yearlist"></ul>
     <script src="module1.js"></script>
 </body>
 </html>
