--- a/html css js/testmodule1.html
+++ b/html css js/testmodule1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Testing JavaScript</title>
+    <title>Testing JavaScript. Module 2</title>
 </head>
 <body>
     <h1 id="target"></h1>
